--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-747276082\testng-customsuite.xml</span>
+                    <span>C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-2129281793\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,27 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="contactus(sathish, kajal123, 2.0, 2.0)">contactus(sathish, kajal123, 2.0, 2.0)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.ContactUsTest" hash-for-method="textcheck">textcheck</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="contactus(karan, jay, 8.0, 4.0)">contactus(karan, jay, 8.0, 4.0)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="contactus(harish, janu, 7.0, 3.0)">contactus(harish, janu, 7.0, 3.0)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="contactus(mehul, vijay123, 1.0, 1.0)">contactus(mehul, vijay123, 1.0, 1.0)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.FacilityTestClass" hash-for-method="titlecheck">titlecheck</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.ContactUsTest" hash-for-method="titlecheck">titlecheck</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -140,39 +125,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">technoTutorsQaTests.FacilityTestClass</span>
+              <span class="class-name">technoTutorsQaTests.ContactUsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="contactus(sathish, kajal123, 2.0, 2.0)">
-                  </a> <!-- contactus(sathish, kajal123, 2.0, 2.0) -->
-                  <span class="method-name">contactus</span>
-                  <span class="parameters">(sathish, kajal123, 2.0, 2.0)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="contactus(karan, jay, 8.0, 4.0)">
-                  </a> <!-- contactus(karan, jay, 8.0, 4.0) -->
-                  <span class="method-name">contactus</span>
-                  <span class="parameters">(karan, jay, 8.0, 4.0)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="contactus(harish, janu, 7.0, 3.0)">
-                  </a> <!-- contactus(harish, janu, 7.0, 3.0) -->
-                  <span class="method-name">contactus</span>
-                  <span class="parameters">(harish, janu, 7.0, 3.0)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="contactus(mehul, vijay123, 1.0, 1.0)">
-                  </a> <!-- contactus(mehul, vijay123, 1.0, 1.0) -->
-                  <span class="method-name">contactus</span>
-                  <span class="parameters">(mehul, vijay123, 1.0, 1.0)</span>
+                  <a name="textcheck">
+                  </a> <!-- textcheck -->
+                  <span class="method-name">textcheck</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -187,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-747276082\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-2129281793\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;technoTutorsQaTests.FacilityTestClass&quot;/&gt;
+      &lt;class name=&quot;technoTutorsQaTests.ContactUsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -236,32 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'titlecheck')
-data.setCell(0, 2, 'technoTutorsQaTests.FacilityTestClass')
-data.setCell(0, 3, 1565);
+data.setCell(0, 2, 'technoTutorsQaTests.ContactUsTest')
+data.setCell(0, 3, 3852);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'contactus')
-data.setCell(1, 2, 'technoTutorsQaTests.FacilityTestClass')
-data.setCell(1, 3, 1105);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'contactus')
-data.setCell(2, 2, 'technoTutorsQaTests.FacilityTestClass')
-data.setCell(2, 3, 1062);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'contactus')
-data.setCell(3, 2, 'technoTutorsQaTests.FacilityTestClass')
-data.setCell(3, 3, 1037);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'contactus')
-data.setCell(4, 2, 'technoTutorsQaTests.FacilityTestClass')
-data.setCell(4, 3, 982);
+data.setCell(1, 1, 'textcheck')
+data.setCell(1, 2, 'technoTutorsQaTests.ContactUsTest')
+data.setCell(1, 3, 193);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -287,66 +235,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">technoTutorsQaTests.FacilityTestClass</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">technoTutorsQaTests.ContactUsTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">titlecheck</span>
-                <span class="method-start">23779 ms</span>
+                <span class="method-start">26682 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">25350 ms</span>
+                <span class="method-start">30542 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">27305 ms</span>
+                <span class="method-start">32227 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">contactus(mehul, vijay123, 1.0, 1.0)</span>
-                <span class="method-start">42697 ms</span>
+                <span class="method-name">textcheck</span>
+                <span class="method-start">54015 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">43741 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">44496 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">contactus(sathish, kajal123, 2.0, 2.0)</span>
-                <span class="method-start">62241 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">63228 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">63998 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">contactus(harish, janu, 7.0, 3.0)</span>
-                <span class="method-start">81621 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">82685 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">83842 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">contactus(karan, jay, 8.0, 4.0)</span>
-                <span class="method-start">101590 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">102697 ms</span>
+                <span class="method-start">54211 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
