--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,34 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">contactus</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:36</td>   <td>19544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">contactus</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:56</td>   <td>38924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">contactus</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:09:15</td>   <td>58893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.contactus(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:50, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">contactus</td> 
-  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:07:34</td>   <td>-42694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:01</td>   <td>-15392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:18</td>   <td>1800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:38</td>   <td>21302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:58</td>   <td>41146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FacilityTestClass.setup()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:07:59</td>   <td>-17347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:18</td>   <td>1044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:37</td>   <td>20531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:08:57</td>   <td>39989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:09:17</td>   <td>60001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FacilityTestClass.teardown()[pri:0, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 15:07:58</td>   <td>-18918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FacilityTestClass.titlecheck()[pri:49, instance:technoTutorsQaTests.FacilityTestClass@307f6b8c]">titlecheck</td> 
-  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/16 16:25:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/16 16:26:10</td>   <td>32225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/16 16:26:08</td>   <td>30540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/16 16:26:32</td>   <td>54208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/16 16:26:31</td>   <td>54012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.textcheck()[pri:50, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">textcheck</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/16 16:26:04</td>   <td>26679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.titlecheck()[pri:49, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">titlecheck</td> 
+  <td>main@949057310</td>   <td></td> </tr>
 </table>
