--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,7 +11,23 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>textcheck</td>
+<td>phonetext</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>emailtext</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>logo</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>adress</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>technotext</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
