--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">55,055</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">126,676</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">technoTutorsQaTests.ContactUsTest</td><td><a href="#m0">textcheck</a></td><td rowspan="1">1584390391956</td><td rowspan="1">193</td></tr><tr class="passedeven"><td><a href="#m1">titlecheck</a></td><td rowspan="1">1584390364623</td><td rowspan="1">3852</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">technoTutorsQaTests.ContactUsTest</td><td><a href="#m0">adress</a></td><td rowspan="1">1584461114681</td><td rowspan="1">104</td></tr><tr class="passedeven"><td><a href="#m1">emailtext</a></td><td rowspan="1">1584461155929</td><td rowspan="1">87</td></tr><tr class="passedeven"><td><a href="#m2">logo</a></td><td rowspan="1">1584461094682</td><td rowspan="1">124</td></tr><tr class="passedeven"><td><a href="#m3">phonetext</a></td><td rowspan="1">1584461176431</td><td rowspan="1">261</td></tr><tr class="passedeven"><td><a href="#m4">technotext</a></td><td rowspan="1">1584461137005</td><td rowspan="1">97</td></tr><tr class="passedeven"><td><a href="#m5">titlecheck</a></td><td rowspan="1">1584461075050</td><td rowspan="1">2060</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">technoTutorsQaTests.ContactUsTest#textcheck</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">technoTutorsQaTests.ContactUsTest#titlecheck</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">technoTutorsQaTests.ContactUsTest#adress</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">technoTutorsQaTests.ContactUsTest#emailtext</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">technoTutorsQaTests.ContactUsTest#logo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">technoTutorsQaTests.ContactUsTest#phonetext</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">technoTutorsQaTests.ContactUsTest#technotext</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">technoTutorsQaTests.ContactUsTest#titlecheck</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
