--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-2129281793\testng-customsuite.xml</span>
+                    <span>C:\Users\Vijay\AppData\Local\Temp\testng-eclipse--35597474\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.ContactUsTest" hash-for-method="textcheck">textcheck</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.ContactUsTest" hash-for-method="adress">adress</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.ContactUsTest" hash-for-method="emailtext">emailtext</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.ContactUsTest" hash-for-method="logo">logo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.ContactUsTest" hash-for-method="phonetext">phonetext</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="technoTutorsQaTests.ContactUsTest" hash-for-method="technotext">technotext</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -130,9 +150,37 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="textcheck">
-                  </a> <!-- textcheck -->
-                  <span class="method-name">textcheck</span>
+                  <a name="adress">
+                  </a> <!-- adress -->
+                  <span class="method-name">adress</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="emailtext">
+                  </a> <!-- emailtext -->
+                  <span class="method-name">emailtext</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="logo">
+                  </a> <!-- logo -->
+                  <span class="method-name">logo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="phonetext">
+                  </a> <!-- phonetext -->
+                  <span class="method-name">phonetext</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="technotext">
+                  </a> <!-- technotext -->
+                  <span class="method-name">technotext</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -147,7 +195,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Vijay\AppData\Local\Temp\testng-eclipse-2129281793\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Vijay\AppData\Local\Temp\testng-eclipse--35597474\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -196,20 +244,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'titlecheck')
 data.setCell(0, 2, 'technoTutorsQaTests.ContactUsTest')
-data.setCell(0, 3, 3852);
+data.setCell(0, 3, 2060);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'textcheck')
+data.setCell(1, 1, 'phonetext')
 data.setCell(1, 2, 'technoTutorsQaTests.ContactUsTest')
-data.setCell(1, 3, 193);
+data.setCell(1, 3, 261);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'logo')
+data.setCell(2, 2, 'technoTutorsQaTests.ContactUsTest')
+data.setCell(2, 3, 124);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'adress')
+data.setCell(3, 2, 'technoTutorsQaTests.ContactUsTest')
+data.setCell(3, 3, 104);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'technotext')
+data.setCell(4, 2, 'technoTutorsQaTests.ContactUsTest')
+data.setCell(4, 3, 97);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'emailtext')
+data.setCell(5, 2, 'technoTutorsQaTests.ContactUsTest')
+data.setCell(5, 3, 87);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -242,23 +306,71 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">titlecheck</span>
-                <span class="method-start">26682 ms</span>
+                <span class="method-start">24159 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">30542 ms</span>
+                <span class="method-start">26227 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">32227 ms</span>
+                <span class="method-start">27041 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">textcheck</span>
-                <span class="method-start">54015 ms</span>
+                <span class="method-name">logo</span>
+                <span class="method-start">43791 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">54211 ms</span>
+                <span class="method-start">43917 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">44706 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">adress</span>
+                <span class="method-start">63790 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">63897 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">64895 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">technotext</span>
+                <span class="method-start">86114 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">86219 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">87000 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">emailtext</span>
+                <span class="method-start">105038 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">105128 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">105931 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">phonetext</span>
+                <span class="method-start">125540 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">125805 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
