--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/16 16:25:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 16:26:10</td>   <td>32225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 16:26:08</td>   <td>30540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 16:26:32</td>   <td>54208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 16:26:31</td>   <td>54012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.textcheck()[pri:50, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">textcheck</td> 
+<tr bgcolor="78a366">  <td>20/03/17 12:05:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.adress()[pri:51, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">adress</td> 
   <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/16 16:26:04</td>   <td>26679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.titlecheck()[pri:49, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">titlecheck</td> 
+<tr bgcolor="78a366">  <td>20/03/17 12:05:55</td>   <td>41248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.emailtext()[pri:53, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">emailtext</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:04:54</td>   <td>-19999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.logo()[pri:50, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">logo</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:06:16</td>   <td>61750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.phonetext()[pri:54, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">phonetext</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:04:10</td>   <td>-63787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:04:37</td>   <td>-36748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:04:55</td>   <td>-19083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:05:15</td>   <td>1106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:05:37</td>   <td>23211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:05:56</td>   <td>42141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:04:37</td>   <td>-37563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:04:54</td>   <td>-19873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:05:14</td>   <td>107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:05:37</td>   <td>22430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:05:56</td>   <td>41339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:06:16</td>   <td>62015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:05:37</td>   <td>22324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.technotext()[pri:52, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">technotext</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/17 12:04:35</td>   <td>-39631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.titlecheck()[pri:49, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">titlecheck</td> 
   <td>main@949057310</td>   <td></td> </tr>
 </table>
