--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,40 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:04:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
+<tr bgcolor="78a366">  <td>20/03/19 12:15:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@7d70d1b1]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:04:35</td>   <td>24156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.titlecheck()[pri:49, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">titlecheck</td> 
+<tr bgcolor="78a366">  <td>20/03/19 12:15:45</td>   <td>27591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamic()[pri:53, instance:technoTutorsQaTests.SubjectAreaTest@7d70d1b1]">learnerandacadamic</td> 
   <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:04:37</td>   <td>26224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:04:37</td>   <td>27039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:04:54</td>   <td>43788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.logo()[pri:50, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">logo</td> 
-  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:04:54</td>   <td>43914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:04:55</td>   <td>44704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:05:14</td>   <td>63787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.adress()[pri:51, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">adress</td> 
-  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:05:14</td>   <td>63894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:05:15</td>   <td>64893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:05:37</td>   <td>86111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.technotext()[pri:52, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">technotext</td> 
-  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:05:37</td>   <td>86217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:05:37</td>   <td>86998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:05:55</td>   <td>105035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.emailtext()[pri:53, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">emailtext</td> 
-  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:05:56</td>   <td>105126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:05:56</td>   <td>105928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactUsTest.setup()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:06:16</td>   <td>125537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTest.phonetext()[pri:54, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">phonetext</td> 
-  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/17 12:06:16</td>   <td>125802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactUsTest.teardown()[pri:0, instance:technoTutorsQaTests.ContactUsTest@7d70d1b1]">&lt;&lt;teardown</td> 
+<tr bgcolor="78a366">  <td>20/03/19 12:16:10</td>   <td>53468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@7d70d1b1]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
 </table>
