--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,70 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/19 12:15:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamic()[pri:53, instance:technoTutorsQaTests.SubjectAreaTest@7d70d1b1]">learnerandacadamic</td> 
-  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 12:15:17</td>   <td>-27591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 12:16:10</td>   <td>25877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.Logocheck()[pri:50, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">Logocheck</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:56</td>   <td>46376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookamathtutoracadamic()[pri:52, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookamathtutoracadamic</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:31</td>   <td>21101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookamathtutorlearner()[pri:51, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookamathtutorlearner</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:57:52</td>   <td>-78096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookefrenchtutoracadamic()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookefrenchtutoracadamic</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:15</td>   <td>125319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookenglishtutoracadamic()[pri:55, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookenglishtutoracadamic</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:49</td>   <td>99216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookenglishtutorlearner()[pri:54, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookenglishtutorlearner</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:02:10</td>   <td>180227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookfrenchtutorlearner()[pri:57, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookfrenchtutorlearner</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:41</td>   <td>151290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamicenglish()[pri:56, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">learnerandacadamicenglish</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:18</td>   <td>-51576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamicfrench()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">learnerandacadamicfrench</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:21</td>   <td>70827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamicmath()[pri:53, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">learnerandacadamicmath</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:57:24</td>   <td>-106293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:57:59</td>   <td>-71208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:27</td>   <td>-43113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:50</td>   <td>-20078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:11</td>   <td>930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:38</td>   <td>27894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:02</td>   <td>52075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:29</td>   <td>79367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:55</td>   <td>105110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:21</td>   <td>131374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:50</td>   <td>159985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:57:57</td>   <td>-72478</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:26</td>   <td>-43905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:49</td>   <td>-21263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:10</td>   <td>83</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:37</td>   <td>26651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:01</td>   <td>51269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:28</td>   <td>78412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:54</td>   <td>104304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:20</td>   <td>130216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:49</td>   <td>159146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:02:16</td>   <td>185975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:47</td>   <td>-22774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.titlecheck()[pri:49, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">titlecheck</td> 
+  <td>main@770189387</td>   <td></td> </tr>
 </table>
