--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,70 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/03/19 12:15:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@7d70d1b1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 12:15:45</td>   <td>27591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamic()[pri:53, instance:technoTutorsQaTests.SubjectAreaTest@7d70d1b1]">learnerandacadamic</td> 
-  <td>main@949057310</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/03/19 12:16:10</td>   <td>53468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@7d70d1b1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:57:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:57:52</td>   <td>28197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookefrenchtutoracadamic()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookefrenchtutoracadamic</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:57:57</td>   <td>33815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:57:59</td>   <td>35085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:18</td>   <td>54717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamicfrench()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">learnerandacadamicfrench</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:26</td>   <td>62388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:27</td>   <td>63180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:47</td>   <td>83519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.titlecheck()[pri:49, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">titlecheck</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:49</td>   <td>85030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:58:50</td>   <td>86215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:10</td>   <td>106293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.Logocheck()[pri:50, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">Logocheck</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:10</td>   <td>106376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:11</td>   <td>107223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:31</td>   <td>127394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookamathtutorlearner()[pri:51, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookamathtutorlearner</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:37</td>   <td>132944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:38</td>   <td>134187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 14:59:56</td>   <td>152669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookamathtutoracadamic()[pri:52, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookamathtutoracadamic</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:01</td>   <td>157562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:02</td>   <td>158368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:21</td>   <td>177120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamicmath()[pri:53, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">learnerandacadamicmath</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:28</td>   <td>184705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:29</td>   <td>185660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:49</td>   <td>205509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookenglishtutorlearner()[pri:54, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookenglishtutorlearner</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:54</td>   <td>210597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:00:55</td>   <td>211403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:15</td>   <td>231612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookenglishtutoracadamic()[pri:55, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookenglishtutoracadamic</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:20</td>   <td>236509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:21</td>   <td>237667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:41</td>   <td>257583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.learnerandacadamicenglish()[pri:56, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">learnerandacadamicenglish</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:49</td>   <td>265439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:01:50</td>   <td>266278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SubjectAreaTest.setup()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:02:10</td>   <td>286520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubjectAreaTest.bookfrenchtutorlearner()[pri:57, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">bookfrenchtutorlearner</td> 
+  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/03/19 15:02:16</td>   <td>292268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SubjectAreaTest.teardown()[pri:0, instance:technoTutorsQaTests.SubjectAreaTest@3cb1ffe6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
 </table>
